tests/expectations/compiler/dynamic_dispatch/dynamic_mapping_unknown_mapping_fail.out
Error [ETYC0372005]: Unknown mapping or storage variable `test.aleo::Bank::nonexistent`
    --> compiler-test:13:35
     |
  13 |     let val: u64 = Bank@(target)::nonexistent.get(key);
     |                                   ^^^^^^^^^^^
